Make sure clicking reset works under every circumstance.

BUG: 318412
FIXED-IN: 4.11.3